Syntax and semantic validation